--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -1,11 +1,12 @@
-server{
-  listen 80;
+server {
+    listen 80;
 
-  location /api {
-    proxy_pass http://localhast:8080/api;
-  }
-  location / {
-    root /var/www;
-    index index.html index.htm;
-  }
+    location /api {
+        proxy_pass http://localhost:8080/api;
+    }
+
+    location / {
+        root    /var/www;
+        index   index.html index.htm;
+    }
 }
